--- a/style.css
+++ b/style.css
@@ -169,3 +169,125 @@ body {
 .text-info { color: #dee2e6; }
 .text-highlight { color: var(--highlight-color); }
 
+/* Temporizador */
+.card {
+  position: relative;
+  width: 250px;
+  height: 250px;
+}
+.temporizador {
+  position: relative;
+  background-color: var(--secondary-color);
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+.temporizador svg {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  transform: rotate(270deg);
+}
+.temporizador svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #191919;
+  stroke-width: 2;
+  transform: translate(5px, 5px);
+}
+.temporizador svg circle:nth-child(2) {
+  stroke: #00ff43;
+  stroke-dasharray: 440;
+  stroke-dashoffset: 440;
+  animation: animate 60s linear infinite;
+}
+@keyframes animate {
+  0% {
+    stroke-dashoffset: 440;
+  }
+  0% {
+    stroke-dashoffset: 0;
+  }
+}
+.dot {
+  position: absolute;
+  inset: 5px;
+  /* background-color: #f00; */
+  z-index: 100;
+  border-radius: 50%;
+  animation: animateDot 60s linear infinite;
+}
+.dot::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  width: 10px;
+  height: 10px;
+  background-color: #00ff43;
+  transform: translate(-50%);
+  border-radius: 50%;
+  box-shadow: 0 0 10px #00ff43,
+  0 0 30px #00ff43;
+}
+@keyframes animateDot {
+  0% {
+    transform: rotate(0deg);
+  }
+  0% {
+    transform: rotate(360deg);
+  }
+}
+.numero {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.numero div {
+  display: flex;
+}
+.numero h2 {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  font-weight: 700;
+  font-size: 2.5em;
+  height: 45px;
+  overflow: hidden;
+}
+.numero h2 span {
+  height: 50px;
+  line-height: 50px;
+  animation: animateNumber1 60s steps(6) infinite;
+}
+@keyframes animateNumber1 {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-300px);
+  }
+}
+.numero h2:nth-child(2) span {
+  animation: animateNumber2 10s steps(10) infinite;
+}
+@keyframes animateNumber2 {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-500px);
+  }
+}
+.numero p {
+  font-weight: 300;
+  font-size: 0.75em;
+  color: rgba(255, 255, 255, 0.5);
+}
