--- a/style.css
+++ b/style.css
@@ -205,13 +205,14 @@ body {
   margin: 0 auto;
   width: 150px;
   height: 150px;
-  background-color: #1a1a1a;
+  background-color: var(--secondary-color);
   border-radius: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.7);
+
 }
 .temporizador__pantalla {
   font-family: 'monospace', sans-serif;
